# event_organizer

./: AGENTS.md  AGENT_IMPLEMENTATION.md  DESIGN.md  IMPLEMENTATION.md  Middleware_IMPLEMENTATION.md  ORCHESTRATOR_PROMPT.md  PLAN.md  README.md  SYSTEMS.md  WORK_ATTRIBUTION.md  alt.pen  event_organizer.pen  package-lock.json  package.json  v1_e_org.pen
agent/: .gitignore  README.md  config.yaml  insights.py  match.py  mcp_server.py  outreach.py  pyproject.toml  reply_handler.py  runtime_app.py  tools.py
agent/apps/match/: app.py
agent/apps/mcp/: modal_app.py  server.py  service.py
agent/apps/outreach/: app.py
agent/apps/replies/: app.py
agent/apps/runtime/: app.py
agent/core/clients/: __init__.py  attio.py  booking_profile.json  convex.py  oncehub.py  oncehub_playwright.py
agent/core/modal/: __init__.py  config.py
agent/core/normalize/: __init__.py  attio_vocab.py  events.py
agent/helper/: attio.py  email_parse.py  models.py  tools.py
agent/runtime/: __init__.py  anthropic_adapter.py  api.py  context_assembler.py  contracts.py  convex_sync.py  modal_app.py  normalize.py  policy.py  run_context.py  service.py  store.py  tool_executor.py  tool_expectations.py
agent/tests/: conftest.py  run_tests.sh  send_email_local.py  test_attio.py  test_attio_env.py  test_attio_vocab.py  test_email_draft_handler.py  test_entrypoint_launchers.py  test_helper_compat.py  test_insights.py  test_mcp_server_io.py  test_modal_app_identity.py  test_oncehub_client.py  test_oncehub_mcp.py  test_oncehub_mcp_service.py  test_reply_handler.py  test_reply_handler_dedupe.py  test_runtime_api.py  test_runtime_harness.py  test_runtime_normalize.py  test_runtime_oncehub.py  test_runtime_policy.py  test_runtime_service.py  test_runtime_traces.py  test_streaming_traces_integration.py
backend/: .gitignore  agents.md  pyproject.toml
backend/attio/: client.py  validate.py
backend/hubspot/: client.py  test_fetch.py
backend/models/: contact.py
backend/scripts/: bootstrap_hubspot.py  test_hubspot_api.py
(+180 files in other folders)
